# plugins

./: .gitignore  LICENSE  README.md
.claude/: CLAUDE.md
.github/workflows/: publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
mcp-servers/: README.md
mcp-servers/email/: README.md  pyproject.toml
mcp-servers/email/src/: server.py
plugins/: README.md
skills/: README.md
skills/email-sender/: SKILL.md
